<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/feedhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="About Us"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_20"
            android:typeface="serif"></TextView>
    </android.support.v7.widget.Toolbar>
    <!--<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/blue_bg"
        android:orientation="horizontal"
        android:padding="@dimen/dim_5">

        <Button
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_action_back" />



    </LinearLayout>-->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/input_fields"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <!-- some input-fields -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/logo" />

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv1"
                        android:layout_marginLeft="10dp"
                        android:text="Who We Are:"
                        android:textColor="#000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/feedinfo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv1"
                        android:text="@string/who"
                        android:padding="@dimen/dim_10"
                        android:textColor="#000000"
                        android:textSize="@dimen/dim_16"></TextView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/textView"
                    android:padding="@dimen/dim_10"
                    android:text="@string/why"
                    android:textColor="#000000"
                    android:textSize="@dimen/dim_16" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/textView"
                    android:padding="@dimen/dim_10"
                    android:text="@string/our"
                    android:textColor="#000000"
                    android:textSize="@dimen/dim_16" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/textView"
                    android:padding="@dimen/dim_10"
                    android:text="@string/verified"
                    android:textColor="#000000"
                    android:textSize="@dimen/dim_16" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/textView"
                    android:padding="@dimen/dim_10"
                    android:text="@string/management"
                    android:textColor="#000000"
                    android:textSize="@dimen/dim_16" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dim_15"
                android:background="@drawable/rounded_primary"
                android:padding="@dimen/dim_15"
                android:gravity="center"
                android:layout_margin="@dimen/dim_30"
                android:text="Terms &amp; Conditions"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_18"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>

